objects/vlocity_cmt__OrderDiscountPricing__c.object
<CustomObject>
    <description>Discount pricing adjustments provided by an order discount. Master-detail child object of Order Discount (OrderDiscount__c).</description>
    <fields>
        <fullName>vlocity_cmt__AdjustmentValue__c</fullName>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderDiscountId__c</fullName>
        <label>Order Discount</label>
        <referenceTo>vlocity_cmt__OrderDiscount__c</referenceTo>
        <relationshipLabel>Order Discount Pricing</relationshipLabel>
        <relationshipName>OrderDiscountPricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipLabel>Order Discount Pricing</relationshipLabel>
        <relationshipName>OrderDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Order Discount Pricing</relationshipLabel>
        <relationshipName>OrderDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Order Discount Pricing</relationshipLabel>
        <relationshipName>OrderDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Discount Pricing</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Discount Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>